scss/partials/_listingDefault.scss
@mixin custom-hr {
	content: "";
	display: block;
	height: 2px;
	width: 100%;
	margin: 35px 0;
	border-radius: 5px;
}

body.listing-template-default {
	.content-sidebar-wrap {
		max-width: 100%;
		padding: 0;
	}
	.site-inner {
		padding-top: 1px;
		padding-bottom: 0;
	}
	#equity-content {
		padding: 0;
	}
	.content-sidebar-wrap {
		padding-bottom: 35px;
		&::before {
			display: none;
		}
	}
	.content {
		float: none;
		width: 100%;
	}
	.entry-content {
		ul {
			margin: 0;
		}
		li {
			list-style: none;
			padding-left: 0;
		}
	}
	.listing-image-wrap {
		position: relative;
		background-color: #f5f5f5;
		h1 {
			font-size: 32px;
			text-align: center;
			padding-top: 15px;
			padding-bottom: 50px;
		}
		img {
			width: 100%;
			max-height: 835px;
			object-fit: cover;
			border: none;
			@media #{$medium-only} {
				max-height: 600px;
			}
			@media #{$small-only} {
				max-height: 400px;
			}
		}
	}
	.listing-meta {
		position: absolute;
		left: 30px;
		bottom: 30px;
		padding: 35px;
		width: 415px;
		background: rgba(249, 249, 249, .9);
		@media #{$small-only} {
			position: relative;
			left: 0;
			bottom: 0;
			right: 0;
			width: 100%;
		}
		span {
			font-weight: bold;
		}
		h3 {
			font-size: rem-calc(30);
		}
		li {
			margin-bottom: 5px;
		}
	}
	.listing-no-image {
		.listing-meta {
			position: relative;
			left: 0;
			bottom: 0;
			right: 0;
			width: 100%;
			background-color: #fff;
			> * {
				max-width: 1280px;
				margin: 0 auto;
				margin-bottom: 5px;
				padding: 0 35px;
			}
		}
		.image-status-wrap {
			position: relative;
			width: 100%;
			background: #fff;
		}
		.listing-status {
			text-align: left;
			display: block;
			position: relative;
			top: 0;
			left: 0;
			max-width: 1280px;
			width: 100%;
			margin: 0 auto;
			padding: 0 35px;
			padding-top: 35px;
			background-color: transparent;
			border: none;
			transform: rotate(0);
		}
	}
	.image-status-wrap {
		position: relative;
		overflow: hidden;
	}
	.listing-status {
		font-family: $header-font-family;
		font-size: 24px;
		text-align: center;
		text-transform: uppercase;
		position: absolute;
		top: 80px;
		left: -150px;
		width: 500px;
		line-height: 50px;
		border: 1px solid #000;
		transform-origin: center;
		transform: rotate(-45deg);
	}
	.wplistings-single-listing,
	.comment-respond,
	.entry-comments {
		max-width: 1280px;
		margin: 0 auto;
		padding: 0 35px;
	}
	ul.listing-top-action-buttons {
		margin: 25px 0;
		li {
			display: inline-block;
			font-size: 18px;
			border: 1px solid;
			border-radius: 3px;
			text-transform: uppercase;
			letter-spacing: .2px;
			line-height: 35px;
			margin: 5px 0;
			margin-right: 30px;
			@media #{$small-only} {
				display: block;
				margin-bottom: 10px;
			}
			&:hover {
				background-color: transparent;
				box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.08);
			}
			a {
				display: block;
				padding: 0 15px;
				width: 100%;
			}
		}
	}
	#listing-details {
		span {
			font-weight: bold;
		}
		&::before {
			@include custom-hr;
		}
	}
	.must-see-listings-section-title {
		font-size: 20px;
		font-weight: bold;
		color: #4C5051;
		margin-bottom: 20px;
	}
	.extended-property-details {
		&::before {
			@include custom-hr;
		}
	}

	#listing-map {
		margin: 35px 0;
		#map-canvas {
			width: 100%;
			height: 850px;
			@media #{$medium-only} {
				height: 500px;
			}
			@media #{$small-only} {
				height: 300px;
			}
		}
	}

	#listing-contact {
		margin-top: 30px;
		h4 {
			color: #4C5051;
			margin: 25px 0;
		}
		input {
			border: 1px solid #E6E6E6;
			border-radius: 3px;
			height: 50px;
			line-height: 50px;
		}
		textarea {
			border: 1.35px solid #E6E6E6;
			border-radius: 3px;
		}
		label {
			font-weight: normal;
			font-size: 16px;
			height: 28px;
			line-height: 24px;
			margin-bottom: 5px;
			vertical-align: middle;
		}
		span.required {	
			font-size: 22px;
			color: #D31313;
		}
		li.firstName, li.lastName, li.contactEmail, .contactPhone {
			float: left;
			width: 47.5%;
			@media #{$small-only} {
				width: 100%;
			}
		}
		li.firstName, li.contactEmail {
			margin-right: 5%;
		}
		li.contactComments {
			clear: left;
		}
		input[type="submit"] {
			line-height: 100%;
			width: 47.5%;
			margin-top: 45px;
			@media #{$small-only} {
				width: 100%;
			}
		}
	}
	#listing-school-neighborhood {
		margin: 35px 0;
		.listing-school-neighborhood-title {
			font-weight: bold;
		}
	}
	.sidebar-primary {
		margin-top: 50px;
	}
}

